# PAStar

./: .gitignore  CMakeLists.txt  README.md  baseline_batch.py  batch.py  cmake_install.cmake  hdastar_comb_mpi.hpp  test.csv  test_path.txt  visualize.ipynb
benchmark/: 64room_005.map.scen  Boston_0_1024.map.scen  Boston_0_256.map.scen  Boston_0_512.map.scen  Paris_1_1024.map.scen  Paris_1_256.map.scen  Paris_1_512.map.scen  den201d.map.scen  den312d.map.scen  den602d.map.scen  maze512-1-0.map.scen  maze512-1-9.map.scen  maze512-32-9.map.scen  maze512-4-0.map.scen  maze512-4-6.map.scen  maze512-8-4.map.scen  orz900d.map.scen  random512-40-5.map.scen
inc/: GAStar.h  HDAStar.h  Instance.h  SingleAgentSolver.h  SpaceTimeAStar.h  common.h  heap.h  list.h
results/grid_hash/: 64room_005x4.csv  Boston_0_4096.csv  Paris_1_4096.csv  maze2048-1-9.csv  maze2048-4-6.csv  random2048-40-5.csv
results/mod_hash/: 64room_005.csv  64room_005x2.csv  64room_005x4.csv  Boston_0_1024.csv  Boston_0_2048.csv  Boston_0_4096.csv  Boston_0_512.csv  Paris_1_1024.csv  Paris_1_2048.csv  Paris_1_256.csv  Paris_1_4096.csv  Paris_1_512.csv  maze1024-1-9.csv  maze1024-32-9.csv  maze1024-4-6.csv  maze1024-8-4.csv  maze2048-1-9.csv  maze2048-4-6.csv  maze512-1-9.csv  maze512-32-9.csv  maze512-4-6.csv  maze512-8-4.csv  orz900d.csv  orz900dx2.csv  orz900dx4.csv  random1024-40-5.csv  random2048-40-5.csv  random512-40-5.csv
results/random_hash/: 64room_005x4.csv  Boston_0_4096.csv  (+4 more)
src/: GAStar.cu  HDAStar.cpp  Instance.cpp  SingleAgentSolver.cpp  SpaceTimeAStar.cpp  driver.cpp  heap.cu  list.cu
